# ccsds-mcp

./: .gitignore  AGENTS.md  README.md  pyproject.toml
src/ccsds_mcp/: __init__.py  cli.py  db.py  ingest.py  scrape.py  search.py
src/ccsds_mcp/resources/pdfs/: .gitignore  .metadata.json
